	 (fixes bug #1755555) (Stuart).
20070904 disk/plusd.[ch],periph.c: register plusd_peripherals in periph_setup()
	 instead of periph_update(), and modify +D IO port handlers to return
	 when the +D is not available (fixes #1771585) (Stuart).
20070904 Makefile.am: distribute the timer directory (Stuart).
20070904 z80/coretest.c: remove unused variable (Stuart).
20070905 Makefile.am: allow windres.o to build from a directory other than the
	 source directory (Stuart).
20070905 Makefile.am,debugger/Makefile.am,lib/Makefile.am,ui/gtk/Makefile.am,
	 z80/Makefile.am: clean generated files on 'make clean' etc.
20070905 ui/{fb/Makefile.am,ggi/Makefile.am,sdl/Makefile.am,svga/Makefile.am,
	 win32/Makefile.am,xlib/Makefile.am},widget/Makefile.am: clean more
	 generated files on 'make clean' (Stuart).
20070905 ui/ggi: remove unused directory.
20070905 ui/{fb/Makefile.am,svga/Makefile.am}: allow building from a directory
	 other than the source directory (Stuart).
20070905 ui/svga/Makefile.am: add missing '/' (Stuart).
20070905 ui/fb/fbkeyboard.c: fix compilation (Stuart).
20070905 configure.in: fix compilation when target_os is mingw32msvc (Stuart).
20070905 configure.in: add --without-libxml2 option (Stuart).
20070905 Makefile.am: use $@.tmp consistently (Stuart).
20070905 configure.in: fix --without-libxml2, add --without-libsamplerate
	 option, tidy up --with-disk-prefix help and rename --with-joystick to
	 --without-joystick in help (Stuart).
20070906 ui/win32/{menu_data.c,menu_data.h,menu_data.rc,win32internals.h}:
	 update menu items, clean up #includes, move handle_menu() prototype
	 and remove redundant menu_machine_pokefinder() prototype (Stuart).
20070906 compat/win32/osname.c: fix up warnings (Stuart).
20070908 ui/win32/{options-header.pl,options-resource.pl,options.pl}: add code
	 to generate options dialogs for Win32 UI (Stuart).
20070908 ui/win32/menu_data.rc: fix compilation without libpng (Stuart).