@@ -2129,3 +2129,4 @@
 20070908 ui/win32/{options-header.pl,options-resource.pl,options.pl}: add code
 	 to generate options dialogs for Win32 UI (Stuart).
 20070908 ui/win32/menu_data.rc: fix compilation without libpng (Stuart).
+20070908 ui/gtk/fileselector.c: give the save dialog its save button back.
